# Hyde

./: .gitignore  README.md  config_example.json  hyde.py  modernwarfare.py  pyproject.toml  util.py  utility.py
ModernWarfare/: __init__.py  database.py  modernwarfare.py  placeholders.json
ModernWarfare/XAssets/: __init__.py  accessories.py  battlePasses.py  bundles.py  callingCards.py  camos.py  challenges.py  charms.py  consumables.py  emblems.py  equipment.py  executions.py  features.py  gameTypes.py  gestures.py  itemSources.py  killstreaks.py  maps.py  missions.py  operators.py  quips.py  skins.py  specialItems.py  splashes.py  sprays.py  stickers.py  vehicleCamos.py  vehicleHorns.py  vehicleTracks.py  vehicles.py  weapons.py
