[tool.poetry]
name = "hyde"
version = "2.0.0"
description = "Call of Duty XAsset compiler that transforms raw assets into digestible data."
authors = ["Ethan C <EthanC@GitHub.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.2.0"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
